--- a/components/card/src/index.scss
+++ b/components/card/src/index.scss
@@ -83,6 +83,10 @@
 
   .dictu-card__paragraph {
     @include mixin.dictu-card__paragraph-accent;
+
+    .dictu-link {
+      @include mixin.dictu-card__content-link-accent;
+    }
   }
 
   .dictu-card__metadata {
